force-app/main/default/objects/Speaker__c/fields/About_Me__c.field-meta.xml
<CustomField>
    <fullName>About_Me__c</fullName>
    <description>Details about the person itself.</description>
    <label>About Me</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>