force-app/main/default/objects/Speaker__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Speaker&apos;s company</description>
    <inlineHelpText>Speaker&apos;s company</inlineHelpText>
    <label>Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>