force-app/main/default/objects/Speaker__c/fields/E_mail__c.field-meta.xml
<CustomField>
    <fullName>E_mail__c</fullName>
    <description>Email of speaker</description>
    <externalId>true</externalId>
    <inlineHelpText>Speaker&apos;s mail id</inlineHelpText>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>