force-app/main/default/objects/Speaker__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Speaker&apos;s Phone number</description>
    <inlineHelpText>Speaker&apos;s Phone number</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>